--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/templates/product/list.phtml
@@ -157,9 +157,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
                                 <?php /* @escapeNotVerified */ echo $_product->getCertifiedInfo(); ?>
                             </div>
 
-                            <?php if($showReviewRating): ?>
-                                <?php echo $block->getReviewsSummaryHtml($_product, $templateType); ?>
-                            <?php endif ?>
+                            <div class="ruk_rating_snippet" data-sku="<?php echo $_product->getSku(); ?>"></div>
 							<?php /* @escapeNotVerified */ echo $block->getProductPrice($_product) ?>
 
 							<?php echo $block->getProductDetailsHtml($_product); ?>
