--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/templates/product/view/subtitle.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/templates/product/view/subtitle.phtml
@@ -24,3 +24,4 @@
 <?php if($block->getProduct()->getGtin()): ?>
     <div itemprop="gtin12" style="display: none;"><?php echo $block->getProduct()->getGtin(); ?></div>
 <?php endif; ?>
+<div class="ruk_rating_snippet" data-sku="<?php echo $block->getProduct()->getSku(); ?>" style="margin-bottom: 6px;min-height: 0;"></div>
