所有添加购物车按钮title属性去掉；所有集合页产品名称添加title属性。

--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/templates/product/list.phtml
@@ -139,6 +139,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 							?>
 							<strong class="product name product-item-name">
 								<a class="product-item-link"
+                                   title="<?php /* @escapeNotVerified */ echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>"
 								   href="<?php /* @escapeNotVerified */ echo $_product->getProductUrl() ?>">
 									<?php /* @escapeNotVerified */ echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>
 								</a>
