--- a/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductFilter/templates/custom_list.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductFilter/templates/custom_list.phtml
@@ -79,6 +79,7 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 							                <?php if($block->isShow('name')): ?>
 							                <strong class="product name product-item-name">
 							                    <a class="product-item-link"
+                                                   title="<?php /* @escapeNotVerified */ echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>"
 							                       href="<?php /* @escapeNotVerified */ echo $_product->getProductUrl() ?>">
 							                        <?php /* @escapeNotVerified */ echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>
 							                    </a>
@@ -104,7 +105,6 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 																<input type="hidden" name="<?php /* @escapeNotVerified */ echo Action::PARAM_NAME_URL_ENCODED; ?>" value="<?php /* @escapeNotVerified */ echo $postParams['data'][Action::PARAM_NAME_URL_ENCODED]; ?>">
 																<?php echo $block->getBlockHtml('formkey')?>
 																<button type="submit"
-																		title="<?php echo $block->escapeHtml(__('Add to Cart')); ?>"
 																		class="action tocart primary">
 																	<span><?php /* @escapeNotVerified */ echo __('Add to Cart') ?></span>
 																</button>
