--- a/app/design/frontend/Codazon/fastest/hightech3/Codazon_ProductFilter/templates/grid_slider_1.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech3/Codazon_ProductFilter/templates/grid_slider_1.phtml
@@ -122,19 +122,10 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 				                    $_productNameStripped = $block->stripTags($_product->getName(), null, true);
 				                ?>
 				                <?php if($block->isShow('name')): ?>
-				                <?php
-				                	$productName = $_helper->productAttribute($_product, $_product->getName(), 'name');
-				                	$nameLength = 50;
-                                    if(strlen($productName)> $nameLength ) {
-                                        $strCut = substr($productName, 0, $nameLength);
-                                        $productName = substr($strCut, 0, strrpos($strCut, ' ')).'&hellip;';
-                                    }
-                                    $productName = $this->stripTags($productName,null,true);
-                                ?>
 				                <strong class="product name product-item-name">
 				                    <a class="product-item-link"
 				                       href="<?php /* @escapeNotVerified */ echo $_product->getProductUrl() ?>">
-				                        <?php /* @escapeNotVerified */ echo $productName; ?>
+				                        <?php /* @escapeNotVerified */ echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?>
 				                    </a>
 				                </strong>
 				                <?php endif ?>
@@ -167,7 +158,6 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 												<input type="hidden" name="<?php /* @escapeNotVerified */ echo Action::PARAM_NAME_URL_ENCODED; ?>" value="<?php /* @escapeNotVerified */ echo $postParams['data'][Action::PARAM_NAME_URL_ENCODED]; ?>">
 												<?php echo $block->getBlockHtml('formkey')?>
 												<button type="submit"
-														title="<?php echo $block->escapeHtml(__('Add to Cart')); ?>"
 														class="action tocart primary">
 													<span><?php /* @escapeNotVerified */ echo __('Add to Cart') ?></span>
 												</button>
