修复了首页pad端的适配样式问题。

--- a/app/code/Codazon/Shopbybrandpro/view/frontend/templates/widget/static_list.phtml
+++ b/app/code/Codazon/Shopbybrandpro/view/frontend/templates/widget/static_list.phtml
@@ -28,6 +28,13 @@ $widget = ['Codazon_Shopbybrandpro/js/brands' => [
 
 <?php if ($itemCount > 0): ?>
 <?php $i = 0; ?>
+<style>
+    @media (max-width: 1024px) and (min-width: 768px) {
+        .brand-loader.double-bounce-spinner {
+            display: none;
+        }
+    }
+</style>
 <div class="static-list-wrapper no-loaded" data-role="static-list-wrapper">
     <div class="brand-loader double-bounce-spinner" data-role="static-list-loader">
         <div class="double-bounce1"></div>
