--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -1287,6 +1287,11 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 }
 
 //Fix Ipad //
+@media (max-width: 1024px) {
+    .product-list-style02 .products-list .product-item .product-images {
+        max-width: 80px;
+    }
+}
 @media (min-width: 768px) and (max-width: 991px) {
 	.box-cate-style01 .block-title .b-title{
 		font-size:16px;
