--- a/app/code/Magefan/Blog/view/frontend/templates/widget/recent.phtml
+++ b/app/code/Magefan/Blog/view/frontend/templates/widget/recent.phtml
@@ -18,8 +18,99 @@
     $_postCollection = $block->getPostCollection();
 ?>
 <?php if ($_postCollection->count()) { ?>
+    <style>
+        .blog-widget-recent {
+            background: #fff;
+            border-radius: 4px;
+        }
+        .post-list-wrapper .post-list {
+            display: flex;
+            flex-flow: row;
+            padding-left: 20px;
+            padding-bottom: 20px;
+        }
+        .post-list-wrapper .post-holder {
+            width: 285px;
+            height: auto;
+            padding-right: 15px;
+            margin: 0;
+        }
+        .post-ftimg-hld img {
+            width: 270px;
+            max-height: 183px;
+        }
+        .post-title {
+            text-align: left;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            hyphens: manual;
+            min-height: 48px;
+            padding-top: 12px;
+        }
+        .post-title a:hover {
+            text-decoration: none;
+        }
+        .post-list .post-description {
+            font-size: 14px;
+            line-height: 1.3;
+        }
+        .post-list .post-info {
+            padding: 8px 0 0 0;
+            text-align: left;
+            font-size: 12px;
+            color: #666666;
+        }
+        .post-author, .post-posed-date {
+            display: inline;
+        }
+        .verticla-line {
+            color: #E1E1E1;
+        }
+        .blog-widget-recent .title {
+            text-align: left;
+            padding: 20px 20px 0 20px;
+            border-bottom: 1px solid #E1E1E1;
+            margin-bottom: 20px !important;
+        }
+        .blog-widget-title {
+            font-family: 'roboto-medium';
+            font-size: 16px;
+            line-height: 19px;
+            padding-bottom: 10px;
+            display: inline-block;
+            border-bottom: 3px solid #155DA4;
+        }
+        .blog-widget-more {
+            float: right;
+            padding-top: 1.5px;
+        }
+        .blog-widget-more a {
+            font-size: 14px;
+            line-height: 16px;
+            color: #155DA4;
+        }
+        @media (max-width: 1024px) {
+            .post-list-wrapper .post-list {
+                overflow: scroll;
+            }
+            .post-list-wrapper .post-holder:last-child {
+                padding-right: 20px;
+            }
+            .post-list-wrapper .post-list::-webkit-scrollbar{
+                display: none;
+                width: 0;
+                height: 0;
+            }
+        }
+    </style>
 <div class="post-list-wrapper blog-widget-recent">
-    <h3 class="title"><?= $block->escapeHtml($block->getTitle()) ?></h3>
+    <div class="title">
+        <span class="blog-widget-title"><?= $block->escapeHtml($block->getTitle()) ?></span>
+        <span class="blog-widget-more"><a href="/blog">More</a></span>
+    </div>
     <ul class="post-list clearfix">
         <?php foreach ($_postCollection as $_post) { ?>
             <?php
@@ -27,40 +118,6 @@
                 $_postName = $block->escapeHtml($_post->getTitle());
             ?>
             <li class="post-holder post-holder-<?= (int)$_post->getId() ?>">
-                <div class="post-header">
-
-                    <div class="post-title-holder clearfix">
-                        <div class="post-title">
-                            <a class="post-item-link"
-                               href="<?= /*@noEscape*/ $_postUrl ?>">
-                                <?= /*@noEscape*/ $_postName ?>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="post-info clear">
-                        <?php if ($_post->isPublishDateEnabled()) { ?>
-                            <div class="item post-posed-date">
-                                <span class="label"><?= $block->escapeHtml(__('Posted:')) ?></span>
-                                <span class="value"><?= $block->escapeHtml($_post->getPublishDate()) ?></span>
-                            </div>
-                        <?php } ?>
-                        <?php if ($_categoriesCount = $_post->getCategoriesCount()) { ?>
-                        <div class="item post-categories">
-                            <span class="label"><?= $block->escapeHtml(__('Categories:')) ?></span>
-                            <?php $n = 0;
-                            foreach ($_post->getParentCategories() as $ct) { $n++; ?>
-                                <a title="<?= $block->escapeHtml($ct->getTitle()) ?>"
-                                   href="<?= $block->escapeUrl($ct->getCategoryUrl()) ?>">
-                                    <?= $block->escapeHtml($ct->getTitle()) ?>
-                                </a>
-                                <?php if ($n != $_categoriesCount) { ?>, <?php } ?>
-                            <?php } ?>
-                        </div>
-                        <?php } ?>
-                    </div>
-                </div>
-
                 <div class="post-content">
                     <div class="post-description clearfix">
                         <?php $featuredImage = $_post->getFeaturedListImage() ?: $_post->getFeaturedImage(); ?>
@@ -78,22 +135,34 @@
                                 </a>
                             </div>
                         <?php } ?>
-                        <div class="post-text-hld clearfix">
-                            <?= /*@noEscape*/ $block->getShorContent($_post) ?>
+                        <div class="post-title">
+                            <a class="post-item-link"
+                               title="<?= /*@noEscape*/ $_postName ?>"
+                               href="<?= /*@noEscape*/ $_postUrl ?>">
+                                <?= /*@noEscape*/ $_postName ?>
+                            </a>
                         </div>
-                        <a class="post-read-more"
-                           href="<?= /*@noEscape*/ $_postUrl ?>"
-                           title="<?= /*@noEscape*/ $_postName ?>"
-                           >
-                           <?= $block->escapeHtml(__('Read more &#187;')) ?>
-                        </a>
+                        <div class="post-info clear">
+                            <?php if ($block->authorEnabled()) { ?>
+                                <?php if ($_author = $_post->getAuthor()) { ?>
+                                    <div class="item post-author">
+                                        <i class="mf-blog-icon mfbi-user"></i>
+                                        <span class="value">
+                                            by <?= $block->escapeHtml($_author->getTitle()) ?>
+                                        </span>
+                                    </div>
+                                <?php } ?>
+                            <?php } ?>
+                            <?php if ($_post->isPublishDateEnabled()) { ?>
+                                <div class="item post-posed-date">
+                                    <span class="verticla-line">&nbsp;|&nbsp;</span>
+                                    <span class="value">Updated <?= $block->escapeHtml($_post->getPublishDate('M d, Y')) ?></span>
+                                </div>
+                            <?php } ?>
+                        </div>
                     </div>
                 </div>
-                <div class="post-footer">
-
-                </div>
             </li>
-
         <?php } ?>
     </ul>
 </div>
