--- a/app/code/Magefan/Blog/view/frontend/templates/widget/recent_masonry.phtml
+++ b/app/code/Magefan/Blog/view/frontend/templates/widget/recent_masonry.phtml
@@ -15,102 +15,161 @@
 ?>
 
 <?php
-    $_postCollection = $block->getPostCollection();
+$_postCollection = $block->getPostCollection();
 ?>
 <?php if ($_postCollection->count()) { ?>
-<div class="post-list-wrapper blog-widget-recent blog-widget-recent-masonry">
-    <h3 class="title"><?= $block->escapeHtml($block->getTitle()) ?></h3>
-    <ul class="post-list clearfix">
-        <?php foreach ($_postCollection as $_post) { ?>
-            <?php
+    <style>
+        .blog-widget-recent {
+            background: #fff;
+            border-radius: 4px;
+        }
+        .post-list-wrapper .post-list {
+            display: flex;
+            flex-flow: row;
+            padding-left: 16px;
+            padding-bottom: 16px;
+        }
+        .post-list-wrapper .post-holder {
+            width: 285px;
+            height: auto;
+            padding-right: 15px;
+            margin: 0;
+        }
+        .post-ftimg-hld img {
+            width: 270px;
+            max-height: 183px;
+        }
+        .post-title {
+            text-align: left;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            hyphens: manual;
+            min-height: 48px;
+            padding-top: 12px;
+        }
+        .post-title a:hover {
+            text-decoration: none;
+        }
+        .post-list .post-description {
+            font-size: 16px;
+            line-height: 1.3;
+        }
+        .post-list .post-info {
+            padding: 8px 0 0 0;
+            text-align: left;
+            font-size: 14px;
+            color: #666666;
+        }
+        .post-author, .post-posed-date {
+            display: inline;
+        }
+        .verticla-line {
+            color: #E1E1E1;
+        }
+        .blog-widget-recent .title {
+            text-align: left;
+            padding: 20px 16px 0 16px;
+            border-bottom: 1px solid #E1E1E1;
+            margin-bottom: 16px !important;
+        }
+        .blog-widget-title {
+            font-family: 'roboto-medium';
+            font-size: 16px;
+            line-height: 19px;
+            padding-bottom: 10px;
+            display: inline-block;
+            border-bottom: 3px solid #155DA4;
+        }
+        .blog-widget-more {
+            padding-left: 16px;
+            padding-bottom: 20px;
+            border-bottom: 4px solid #F4F4F4;
+        }
+        .blog-widget-more a {
+            font-size: 14px;
+            line-height: 16px;
+            color: #155DA4;
+        }
+        @media (max-width: 1024px) {
+            .post-list-wrapper .post-list {
+                overflow: scroll;
+            }
+            .post-list-wrapper .post-holder:last-child {
+                padding-right: 16px;
+            }
+            .post-list-wrapper .post-list::-webkit-scrollbar{
+                display: none;
+                width: 0;
+                height: 0;
+            }
+        }
+        @media (max-width: 767px) {
+            .post-list .post-description {
+                display: block;
+            }
+        }
+    </style>
+    <div class="post-list-wrapper blog-widget-recent">
+        <div class="title">
+            <span class="blog-widget-title"><?= $block->escapeHtml($block->getTitle()) ?></span>
+        </div>
+        <ul class="post-list clearfix">
+            <?php foreach ($_postCollection as $_post) { ?>
+                <?php
                 $_postUrl = $block->escapeUrl($_post->getPostUrl());
                 $_postName = $block->escapeHtml($_post->getTitle());
-            ?>
-            <li class="post-holder post-holder-<?= (int)$_post->getId() ?>">
-                <div class="post-header">
-
-                    <div class="post-title-holder clearfix">
-                        <div class="post-title">
-                            <a class="post-item-link"
-                               href="<?= /*@noEscape*/ $_postUrl ?>">
-                                <?= /*@noEscape*/ $_postName ?>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="post-info clear">
-                        <?php if ($_post->isPublishDateEnabled()) { ?>
-                            <div class="item post-posed-date">
-                                <span class="label"><?= $block->escapeHtml(__('Posted:')) ?></span>
-                                <span class="value"><?= $block->escapeHtml($_post->getPublishDate()) ?></span>
-                            </div>
-                        <?php } ?>
-                        <?php if ($_categoriesCount = $_post->getCategoriesCount()) { ?>
-                        <div class="item post-categories">
-                            <span class="label"><?= $block->escapeHtml(__('Categories:')) ?></span>
-                            <?php $n = 0;
-                            foreach ($_post->getParentCategories() as $ct) { $n++; ?>
-                                <a title="<?= $block->escapeHtml($ct->getTitle()) ?>"
-                                   href="<?= $block->escapeUrl($ct->getCategoryUrl()) ?>">
-                                    <?= $block->escapeHtml($ct->getTitle()) ?>
-                                </a>
-                                <?php if ($n != $_categoriesCount) { ?>, <?php } ?>
-                            <?php } ?>
-                        </div>
-                        <?php } ?>
-                    </div>
-                </div>
-
-                <div class="post-content">
-                    <div class="post-description clearfix">
-                        <?php $featuredImage = $_post->getFeaturedListImage() ?: $_post->getFeaturedImage(); ?>
-                        <?php if ($featuredImage) { ?>
-                            <?php
+                ?>
+                <li class="post-holder post-holder-<?= (int)$_post->getId() ?>">
+                    <div class="post-content">
+                        <div class="post-description clearfix">
+                            <?php $featuredImage = $_post->getFeaturedListImage() ?: $_post->getFeaturedImage(); ?>
+                            <?php if ($featuredImage) { ?>
+                                <?php
                                 $featuredImgAlt = $_post->getData('featured_list_img_alt') ?: $_post->getData('featured_img_alt');
-                            if (!$featuredImgAlt) {
-                                $featuredImgAlt = $_postName;
-                            }
-                            ?>
-                            <div class="post-ftimg-hld">
-                                <a href="<?= /*@noEscape*/ $_postUrl ?>" title="<?= /*@noEscape*/ $_postName ?>">
-                                    <img src="<?= $block->escapeHtml($featuredImage) ?>"
-                                         alt="<?= $block->escapeHtml($featuredImgAlt) ?>" />
+                                if (!$featuredImgAlt) {
+                                    $featuredImgAlt = $_postName;
+                                }
+                                ?>
+                                <div class="post-ftimg-hld">
+                                    <a href="<?= /*@noEscape*/ $_postUrl ?>" title="<?= /*@noEscape*/ $_postName ?>">
+                                        <img src="<?= $block->escapeHtml($featuredImage) ?>"
+                                             alt="<?= $block->escapeHtml($featuredImgAlt) ?>" />
+                                    </a>
+                                </div>
+                            <?php } ?>
+                            <div class="post-title">
+                                <a class="post-item-link"
+                                   title="<?= /*@noEscape*/ $_postName ?>"
+                                   href="<?= /*@noEscape*/ $_postUrl ?>">
+                                    <?= /*@noEscape*/ $_postName ?>
                                 </a>
                             </div>
-                        <?php } ?>
-                        <?php if ($content = $block->getShorContent($_post)) { ?>
-                            <div class="post-text-hld clearfix">
-                                <?= /*@noEscape*/ $content ?>
+                            <div class="post-info clear">
+                                <?php if ($block->authorEnabled()) { ?>
+                                    <?php if ($_author = $_post->getAuthor()) { ?>
+                                        <div class="item post-author">
+                                            <i class="mf-blog-icon mfbi-user"></i>
+                                            <span class="value">
+                                            by <?= $block->escapeHtml($_author->getTitle()) ?>
+                                        </span>
+                                        </div>
+                                    <?php } ?>
+                                <?php } ?>
+                                <?php if ($_post->isPublishDateEnabled()) { ?>
+                                    <div class="item post-posed-date">
+                                        <span class="verticla-line">&nbsp;|&nbsp;</span>
+                                        <span class="value">Updated <?= $block->escapeHtml($_post->getPublishDate('M d, Y')) ?></span>
+                                    </div>
+                                <?php } ?>
                             </div>
-                        <?php } ?>
-                        <a class="post-read-more"
-                           href="<?= /*@noEscape*/ $_postUrl ?>"
-                           title="<?= /*@noEscape*/ $_postName ?>">
-                           <?= $block->escapeHtml(__('Read more &#187;')) ?>
-                        </a>
+                        </div>
                     </div>
-                </div>
-                <div class="post-footer">
-
-                </div>
-            </li>
-
-        <?php } ?>
-    </ul>
-</div>
-<script>
-requirejs( [ 'require', 'jquery', 'Magefan_Blog/js/lib/masonry.pkgd.min' ],
-function( require, $, Masonry ) {
-    require( [ 'jquery-bridget/jquery-bridget' ],
-    function( jQueryBridget ) {
-        jQueryBridget( 'masonry', Masonry, $ );
-        $('.post-list').masonry({
-            itemSelector: '.post-holder',
-            percentPosition: true
-        })
-    });
-});
-    <?php /* more info http://masonry.desandro.com/extras.html */ ?>
-</script>
-
+                </li>
+            <?php } ?>
+        </ul>
+        <div class="blog-widget-more"><a href="/blog">See All Blogs</a></div>
+    </div>
 <?php } ?>
