--- a/app/design/frontend/Codazon/fastest/hightech2/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
@@ -114,7 +114,7 @@
 }
 
 .bundle-module .promotions-lists .old-price {
-    font-family: 'roboto';
+    font-family: 'Roboto';
     font-size: 14px;
     line-height: 16px;
     text-decoration-line: line-through;
@@ -128,7 +128,7 @@
 }
 
 .bundle-module .promotions-lists .discount-info, .bundle-module .promotions-lists .amount-info, .bundle-module .promotions-lists .out-of-stock {
-    font-family: 'roboto';
+    font-family: 'Roboto';
     font-size: 14px;
     line-height: 150%;
     color: #333333;
@@ -146,7 +146,7 @@
     height: 12.8vw;
     margin: 0;
     padding: 3.2vw 0;
-    font-family: 'roboto';
+    font-family: 'Roboto';
     font-size: 16px;
     line-height: 24px;
     color: #FFFFFF;
@@ -156,4 +156,98 @@
     background: url(../images/bundleconfig.png);
     border-radius: 2px;
     border: none;
+}
+
+
+/***************configure*****************/
+.modal-popup .modal-inner-wrap .modal-header {
+    padding: 20px 16px 0 16px;
+}
+
+.modal-popup .modal-inner-wrap .modal-header .modal-title {
+    width: 212px;
+    border-bottom: 2px solid #155DA4;
+    font-family: 'roboto-medium';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #333333;
+    margin: 0;
+    padding: 0 0 20px 0;
+}
+
+.modal-popup .modal-inner-wrap .modal-header .action-close:before {
+    font-size: 15px;
+    line-height: 15px !important;
+    color: #333333 !important;
+}
+
+.modal-popup .modal-inner-wrap .action-close {
+    position: absolute;
+    right: 6px;
+    top: 10px;
+}
+
+.modal-popup .modal-inner-wrap .modal-content {
+    border-top: 1px solid #E1E1E1 !important;
+    padding: 4.2667vw;
+}
+
+.modal-popup .modal-inner-wrap .configure_form_fields .bundles-info .base-product-name h4, .modal-popup .modal-inner-wrap .configure_form_fields .selection-info .selection-product-name h4 {
+    font-family: 'roboto-medium';
+    font-size: 16px;
+    line-height: 130%;
+    color: #333333;
+    margin-bottom: 3.2vw;
+}
+
+.modal-popup .modal-inner-wrap .configure_form_fields .price-final_price .normal-price {
+    font-family: 'Roboto';
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+}
+
+.modal-popup .modal-inner-wrap .configure_form_fields table {
+    margin: 4.2667vw 0;
+}
+
+.modal-popup .modal-inner-wrap .configure_form_fields table td {
+    padding: 0;
+}
+
+.modal-popup .modal-inner-wrap .configure_form_fields table td img {
+    width: 26.6667vw;
+}
+
+.modal-popup .modal-inner-wrap .configure_form_fields table .super-attribute-select {
+    border: none;
+    border-radius: 4px;
+    padding: 12px 16px;
+    background: #f4f4f4 url('../images/select-bg.svg') no-repeat 95% 45%;
+    font-family: 'Roboto';
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+}
+
+.modal-popup .modal-inner-wrap .configure_form_fields .right-td .label span {
+    font-family: 'Roboto';
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+}
+
+.modal-popup .modal-inner-wrap .configure-buttons-set button {
+    width: 100%;
+    height: 48px;
+    background: #155DA4;
+    border-radius: 4px;
+}
+
+.modal-popup .modal-inner-wrap .configure-buttons-set button span {
+    font-family: 'Roboto';
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
 }
