捆绑列表底部边框

--- a/app/design/frontend/Codazon/fastest/hightech2/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
@@ -21,7 +21,12 @@
 
 .bundle-module .promotions-lists {
     padding: 4.2667vw;
+    border-bottom: 1px solid #E1E1E1;
 }
+.bundle-module .promotions-lists:last-child {
+    border-bottom: none;
+}
+
 
 .bundle-module .promotions-lists .promotions-selections {
     float: none;
