--- a/app/design/frontend/Codazon/fastest/hightech/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
@@ -24,6 +24,10 @@
 .bundle-module .promotions-lists {
     margin: 20px 0;
     padding: 0 0 0 20px;
+    border-bottom: 1px solid #E1E1E1;
+}
+.bundle-module .promotions-lists:last-child {
+    border-bottom: none;
 }
 
 .bundle-module .promotions-lists .tooltip1 {
