--- a/app/design/frontend/Codazon/fastest/hightech2/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
@@ -77,7 +77,7 @@
     color: #666666;
 }
 
-.bundle-module .promotions-lists .tooltip1 {
+.bundle-module .promotions-lists .tooltipproductname {
     text-overflow: -o-ellipsis-lastline;
     overflow: hidden;
     text-overflow: ellipsis;
