修复因review.io插件导致的样式问题。

--- a/app/code/Magefan/Blog/view/frontend/templates/widget/recent_masonry.phtml
+++ b/app/code/Magefan/Blog/view/frontend/templates/widget/recent_masonry.phtml
@@ -37,7 +37,7 @@ $_postCollection = $block->getPostCollection();
         }
         .post-ftimg-hld img {
             width: 270px;
-            max-height: 183px;
+            height: 183px;
         }
         .post-title {
             text-align: left;
