--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -1895,6 +1895,6 @@
     border:none;
 }
 .block.related .related-available .product-item-name{
-    display: none;
+    margin-left: 0;
 }
 .product-main-content, .product.info.detailed:not(.without_tab){ margin-bottom: 8px; }
