--- a/app/design/frontend/Codazon/fastest/hightech/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech/Magedelight_Bundlediscount/web/css/bundlediscount-m.css
@@ -30,7 +30,7 @@
     border-bottom: none;
 }
 
-.bundle-module .promotions-lists .tooltipproductname {
+.bundle-module .promotions-lists .tooltip-product-name {
     text-overflow: -o-ellipsis-lastline;
     overflow: hidden;
     text-overflow: ellipsis;
