--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1657,7 +1657,7 @@
     box-shadow: unset !important;
     -webkit-box-shadow: unset !important;
 }
-.related .related-upsell-crossell .product-item-info:hover .price-box , .related .related-upsell-crossell:hover .product-reviews-summary{
+.related .related-upsell-crossell .product-item-info:hover .price-box , .related .related-upsell-crossell:hover .product-reviews-summary , .related .related-upsell-crossell .product-item-info:hover .ruk_rating_snippet{
     opacity: unset !important;
     transform: unset !important;
     -moz-transition: unset !important;;
@@ -1707,7 +1707,7 @@
     box-shadow: unset !important;
     -webkit-box-shadow: unset !important;
 }
-.crosssell .related-upsell-crossell .product-item-info:hover .price-box , .crosssell .related-upsell-crossell:hover .product-reviews-summary{
+.crosssell .related-upsell-crossell .product-item-info:hover .price-box , .crosssell .related-upsell-crossell:hover .product-reviews-summary , .crosssell .related-upsell-crossell .product-item-info:hover .ruk_rating_snippet{
     opacity: unset !important;
     transform: unset !important;
     -moz-transition: unset !important;;
