修改活动分类名字。

--- a/app/code/Codazon/AjaxLayeredNavPro/view/frontend/templates/layer/view.phtml
+++ b/app/code/Codazon/AjaxLayeredNavPro/view/frontend/templates/layer/view.phtml
@@ -46,7 +46,7 @@
             ?>
             <?php
                 $currentCategory = $block->getLayer()->getCurrentCategory()->getName();
-                $isEventCategory = $currentCategory == "Black Friday & Cyber Monday Sales";
+                $isEventCategory = $currentCategory == "Christmas Sales";
             ?>
             <?php foreach ($block->getFilters() as $filter): ?>
                 <?php if ($filter->getItemsCount()): ?>
