修改了首页所有模块懒加载CLS问题 & 登录后header样式修改。

--- a/app/code/Codazon/Shopbybrandpro/view/frontend/web/css/source/_js-class.less
+++ b/app/code/Codazon/Shopbybrandpro/view/frontend/web/css/source/_js-class.less
@@ -72,6 +72,26 @@
     }
 }
 
+.our-brands {
+    .no-loaded {
+        .shop-by-brand-list {
+            height: 0;
+        }
+    }
+    .double-bounce-spinner {
+        height: 210px;
+        margin: 0;
+    }
+}
+
+@media(max-width: 767px) {
+    .our-brands {
+        .double-bounce-spinner {
+            height: calc(~'79vw - 32px');
+        }
+    }
+}
+
 @-webkit-keyframes sk-bounce {
   0%, 100% { -webkit-transform: scale(0.0) }
   50% { -webkit-transform: scale(1.0) }
