--- a/app/code/Codazon/Slideshow/view/frontend/templates/slideshow.phtml
+++ b/app/code/Codazon/Slideshow/view/frontend/templates/slideshow.phtml
@@ -42,12 +42,15 @@
 }
 @media (min-width: 768px){
     .tripple-bounce-spinner {
-        padding-top:<?php echo $this->getPadding()-20?>px; padding-bottom:<?php echo $this->getPadding()?>px;
+        padding-top:200px; padding-bottom:200px;
     }
 }
 @media (max-width: 768px){
     .tripple-bounce-spinner {
-        padding-top:50px; padding-bottom:50px;
+        padding-top:20vw; padding-bottom:20vw;
+    }
+    .slider-wrapper.theme-default.loading {
+        min-height: 48vw !important;
     }
 }
 </style>
