--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_hoverbanner.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_hoverbanner.less
@@ -328,6 +328,37 @@
 		display:none;
 	}
 }
+.product-list-style02 {
+    .icon-loading{
+        padding: 250.5px 0;
+        height: 0;
+    }
+}
+.cdz-best-seller-wrap {
+    .icon-loading{
+        padding: 167px 0;
+        height: 0;
+    }
+}
+.cdz-product-tab01 {
+    .icon-loading{
+        padding: 325px 0;
+        height: 0;
+    }
+}
+@media(max-width: 767px) {
+    .cdz-best-seller-wrap {
+        .icon-loading{
+            padding: 138px 0;
+        }
+    }
+    .product-list-style02 {
+        .icon-loading{
+            padding: 348px 0;
+            height: 0;
+        }
+    }
+}
 
 /*Hover scale*/
 .hover-scale{
