修改移动端结帐页面产品模块新增最小高度。

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_order-summary.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_order-summary.less
@@ -193,6 +193,12 @@
         .totals {
             &:extend(.abs-sidebar-totals-mobile all);
         }
+
+        .column.main & {
+            .product-item {
+                min-height: 124px;
+            }
+        }
     }
 }
 
